// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdditionalImagesSection should match a snapshot where has images 1`] = `
<Grid
  className="is-desktop flex-col-min-height"
  isMultiLine={true}
>
  <GridItem
    className="is-half-desktop"
    key="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png"
  >
    <ImageSection
      uri="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png"
    />
  </GridItem>
  <GridItem
    className="is-half-desktop"
    key="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png"
  >
    <ImageSection
      uri="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png"
    />
  </GridItem>
</Grid>
`;

exports[`AdditionalImagesSection should match a snapshot where has no images 1`] = `""`;

exports[`BackToAppsSection should match a snapshot 1`] = `
<LevelRight
  className="pt-4 bt mt-4 flex"
>
  <Button
    onClick={[MockFunction]}
  >
    Back To Apps
  </Button>
</LevelRight>
`;

exports[`CategorySection should match a snapshot where category is defined and is sidebar 1`] = `
<AppDetailSection
  headerText="Category"
  isSidebar={true}
>
  <Tag>
    Game
  </Tag>
</AppDetailSection>
`;

exports[`CategorySection should match a snapshot where category undefined and not sidebar 1`] = `
<AppDetailSection
  headerText="Category"
  isSidebar={false}
>
  <p>
    None
  </p>
</AppDetailSection>
`;

exports[`DescriptionSection should match a snapshot 1`] = `
<HTMLRender
  html="Lorem ipsum"
/>
`;

exports[`DesktopIntegrationSection should match a snapshot where desktopIntegrationTypes empty and not sidebar 1`] = `
<AppDetailSection
  headerText="Desktop Integration"
  isSidebar={false}
>
  <p>
    None
  </p>
</AppDetailSection>
`;

exports[`DesktopIntegrationSection should match a snapshot where desktopIntegrationTypes hasLength and is sidebar 1`] = `
<AppDetailSection
  headerText="Desktop Integration"
  isSidebar={true}
>
  <Tag
    key="Identity Check"
  >
    Identity Check
  </Tag>
  <Tag
    key="Property Marketing Information"
  >
    Property Marketing Information
  </Tag>
  <Tag
    key="Vendor Marketing Report"
  >
    Vendor Marketing Report
  </Tag>
  <Tag
    key="Property Details Generation"
  >
    Property Details Generation
  </Tag>
  <Tag
    key="Applicant Export"
  >
    Applicant Export
  </Tag>
  <Tag
    key="Property"
  >
    Property
  </Tag>
  <Tag
    key="Applicant"
  >
    Applicant
  </Tag>
</AppDetailSection>
`;

exports[`DirectApiSection should match a snapshot where isDirectApi false and not sidebar 1`] = `
<AppDetailSection
  headerText="Integration"
  isSidebar={false}
>
  No
</AppDetailSection>
`;

exports[`DirectApiSection should match a snapshot where isDirectApi true and is sidebar 1`] = `
<AppDetailSection
  headerText="Integration"
  isSidebar={true}
>
  Yes
</AppDetailSection>
`;

exports[`InstallationsTableSection should not render a table when has no data 1`] = `
<InstallationsTableSection
  columns={Array []}
  data={Array []}
>
  <AppDetailSection
    dataTest="render-installations-table-empty-text"
    headerText="Installations"
    isSidebar={false}
  >
    <Content
      dataTest="render-installations-table-empty-text"
    >
      <div
        className="content"
        data-test="render-installations-table-empty-text"
      >
        <H5
          className=""
        >
          <h5
            className="title is-5"
            id=""
          >
            Installations
          </h5>
        </H5>
        <p>
          Currently, there are no installations for your app
        </p>
      </div>
    </Content>
  </AppDetailSection>
</InstallationsTableSection>
`;

exports[`InstallationsTableSection should render a table and match a snapshot when has data 1`] = `
<InstallationsTableSection
  columns={Array []}
  data={
    Array [
      Object {
        "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
        "client": "DXX",
        "created": "2019-12-03T05:33:20",
        "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
        "links": Array [
          Object {
            "action": "GET",
            "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
            "rel": "self",
          },
          Object {
            "action": "GET",
            "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
            "rel": "app",
          },
        ],
        "status": "Active",
      },
    ]
  }
>
  <AppDetailSection
    dataTest="render-installations-table"
    headerText="Installations"
    isSidebar={false}
  >
    <Content
      dataTest="render-installations-table"
    >
      <div
        className="content"
        data-test="render-installations-table"
      >
        <H5
          className=""
        >
          <h5
            className="title is-5"
            id=""
          >
            Installations
          </h5>
        </H5>
        <Table
          columns={Array []}
          data={
            Array [
              Object {
                "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
                "client": "DXX",
                "created": "2019-12-03T05:33:20",
                "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
                "links": Array [
                  Object {
                    "action": "GET",
                    "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
                    "rel": "self",
                  },
                  Object {
                    "action": "GET",
                    "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
                    "rel": "app",
                  },
                ],
                "status": "Active",
              },
            ]
          }
          loading={false}
          scrollable={true}
        >
          <div
            style={
              Object {
                "maxHeight": undefined,
                "overflow": "scroll",
              }
            }
          >
            <table
              className="table is-striped is-fullwidth "
              role="table"
            >
              <thead />
              <tbody />
            </table>
          </div>
        </Table>
      </div>
    </Content>
  </AppDetailSection>
</InstallationsTableSection>
`;

exports[`ListingPreviewSection should match a snapshot 1`] = `
<AppDetailSection
  headerText={
    <React.Fragment>
      <span
        className="mr-2"
      >
        See listing preview
      </span>
       
      <a
        className="p964yes-preview"
        href="#"
        onClick={[Function]}
      >
        <FaExternalLinkAlt />
      </a>
    </React.Fragment>
  }
  isSidebar={true}
>
  <p>
    The listing preview will display your app as it would appear in the Marketplace
  </p>
</AppDetailSection>
`;

exports[`PermissionsSection should match a snapshot where has no permissions 1`] = `
<AppDetailSection
  headerText="Permissions required"
>
  <GridFourCol />
</AppDetailSection>
`;

exports[`PermissionsSection should match a snapshot where has permissions 1`] = `
<AppDetailSection
  headerText="Permissions required"
>
  <GridFourCol>
    <GridFourColItem
      key="Marketplace/developers.read"
    >
      Read data about developers
    </GridFourColItem>
    <GridFourColItem
      key="Marketplace/developers.write"
    >
      Write data about developers
    </GridFourColItem>
  </GridFourCol>
</AppDetailSection>
`;

exports[`PrivateAppSection should match a snapshot where limitToClientIds empty and not sidebar 1`] = `
<AppDetailSection
  headerText="Private App"
  isSidebar={false}
>
  No
</AppDetailSection>
`;

exports[`PrivateAppSection should match a snapshot where limitToClientIds hasLength and is sidebar 1`] = `
<AppDetailSection
  headerText="Private App"
  isSidebar={true}
>
  Yes
</AppDetailSection>
`;

exports[`StatusSection should match a snapshot where isListed false and not sidebar 1`] = `
<AppDetailSection
  headerText="Status"
  isSidebar={false}
>
  <div>
    Not listed
  </div>
</AppDetailSection>
`;

exports[`StatusSection should match a snapshot where isListed true and is sidebar 1`] = `
<AppDetailSection
  headerText="Status"
  isSidebar={true}
>
  <div>
    Listed 
    <FaCheck
      className="c1f01f8l-check"
    />
  </div>
</AppDetailSection>
`;

exports[`SummarySection should match a snapshot 1`] = `
<Content
  className="is-italic"
>
  Lorem ipsum
</Content>
`;
